added listings comment and also index content

--- a/index.html
+++ b/index.html
@@ -12,5 +12,10 @@
   </head>
   <body>
     <!--Viewable stuff: text, links, images, media-->
+    <h1>Welcome to Exceptional Realty Group</h1>
+    <!--Don't need to worry about p here-->
+    <h2>Located in Sacramento, California</h2>
+    <p>Stupid.</p>
   </body>
 </html>
+
