Updated image on index page

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head> 
+  <head>
     <!--Contains info for search engines and browser. Not seen by
   site visitors.-->
     <meta charset="UTF-8">
@@ -15,7 +15,13 @@
     <h1>Welcome to Exceptional Realty Group</h1>
     <!--Don't need to worry about p here-->
     <h2>Located in Sacramento, California</h2>
+
+    <!--foldername/ = go inside the folder.
+    filename = use a file in the current directory
+    ../ leave the current folder and go up to the parent
+    -->
+    <img src="images/intro-pic.jpg" title="Welcome to Exceptional"
+    alt ="The awkwardest living room ever.">
     <p>Stupid.</p>
   </body>
 </html>
-
