Added links to top of every page.

--- a/index.html
+++ b/index.html
@@ -16,9 +16,19 @@
     <!--Don't need to worry about p here-->
     <h2>Located in Sacramento, California</h2>
 
+    <div class="links">
+      <a href="index.html">About</a> ||
+      <a href="contact.html">Contact</a> ||
+      <a href="market-report.html">Market Report</a> ||
+      <a href="new-properties.html">New Properties</a> ||
+      <a href="real-estate-listings.html">Real Estate Listings</a> ||
+      <a href="http://hud.gov" target="_blank">Housing & Urban Development Site </a>
+    </div>
+
     <!--foldername/ = go inside the folder.
     filename = use a file in the current directory
     ../ leave the current folder and go up to the parent
+    target="_blank" leads you to a new tab
     -->
     <img src="images/intro-pic.jpg" title="Welcome to Exceptional"
     alt ="The awkwardest living room ever.">
