--- a/market-report.html
+++ b/market-report.html
@@ -7,7 +7,14 @@
   <body>
     <h1>Exceptional</h1>
     <h2>Realty Group</h2>
-
+    <div class="links">
+      <a href="index.html">About</a> ||
+      <a href="contact.html">Contact</a> ||
+      <a href="market-report.html">Market Report</a> ||
+      <a href="new-properties.html">New Properties</a> ||
+      <a href="real-estate-listings.html">Real Estate Listings</a> ||
+      <a href="http://hud.gov" target="_blank">Housing & Urban Development Site </a>
+    </div>
     <h3>Market Report</h3>
     <!-- Our table will go here -->
     <table>
