--- a/real-estate-listings.html
+++ b/real-estate-listings.html
@@ -7,6 +7,14 @@
   <body>
     <h1>Exceptional Realty Group</h1>
     <h2>We're better than M&M Management.</h2>
+    <div class="links">
+      <a href="index.html">About</a> ||
+      <a href="contact.html">Contact</a> ||
+      <a href="market-report.html">Market Report</a> ||
+      <a href="new-properties.html">New Properties</a> ||
+      <a href="real-estate-listings.html">Real Estate Listings</a> ||
+      <a href="http://hud.gov" target="_blank">Housing & Urban Development Site </a>
+    </div>
     <h3>Property Archive</h3>
     <h4>2014</h4>
     <p>
