--- a/index.html
+++ b/index.html
@@ -33,5 +33,8 @@
     <img src="images/intro-pic.jpg" title="Welcome to Exceptional"
     alt ="The awkwardest living room ever.">
     <p>Stupid.</p>
+    <video controls>
+      <source src="videos/real-estate.mp4" type="video/mp4">
+    </video>
   </body>
 </html>
