--- a/index.html
+++ b/index.html
@@ -1,40 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!--Contains info for search engines and browser. Not seen by
-  site visitors.-->
+    <!-- This is a comment. I can see it in the code, but it will not appear in the browser. -->
+
+    <!--
+    The head section contains info for search engines and the browser and is not seen by site visitors.
+    -->
+
     <meta charset="UTF-8">
-      <!--Contains encoding information-->
-    <title>
-      Exceptional Realty Group - Luxury Homes - About
-      <!--Useful for search engines-->
-    </title>
+    <title>Exceptional Realty Group - Luxury Homes - About</title>
   </head>
   <body>
-    <!--Viewable stuff: text, links, images, media-->
-    <h1>Welcome to Exceptional Realty Group</h1>
-    <!--Don't need to worry about p here-->
-    <h2>Located in Sacramento, California</h2>
+    <!-- The body is the entire viewable area of the web page. For example we can see text, links, images, and media. -->
+    <header>
+      <h1>Exceptional</h1>
+      <h2>Realty Group</h2>
+      <!-- links -->
+      <nav>
+        <a href="index.html">About</a> <a href="new-properties.html">New Properties</a> <a href="real-estate-listings.html">Listings</a> <a href="market-report.html">Market Report</a> <a href="contact.html">Contact</a> <a href="http://hud.gov" target="_blank">H.U.D.</a>
+      </nav>
+    </header>
 
-    <div class="links">
-      <a href="index.html">About</a> ||
-      <a href="contact.html">Contact</a> ||
-      <a href="market-report.html">Market Report</a> ||
-      <a href="new-properties.html">New Properties</a> ||
-      <a href="real-estate-listings.html">Real Estate Listings</a> ||
-      <a href="http://hud.gov" target="_blank">Housing & Urban Development Site </a>
-    </div>
 
-    <!--foldername/ = go inside the folder.
-    filename = use a file in the current directory
-    ../ leave the current folder and go up to the parent
-    target="_blank" leads you to a new tab
-    -->
-    <img src="images/intro-pic.jpg" title="Welcome to Exceptional"
-    alt ="The awkwardest living room ever.">
-    <p>Stupid.</p>
-    <video controls>
-      <source src="videos/real-estate.mp4" type="video/mp4">
-    </video>
+    <section id="featured-property">
+      <img src="images/intro-pic.jpg" alt="A beautiful living room." title="Welcome to Exceptional Realty Group">
+
+      <!--
+      foldername/ = go inside the folder.
+      filename = use a file in the current folder.
+      ../ = leavethe current folder and go up to parent folder.
+      -->
+      <figure>
+        <img src="images/intro-pic.jpg" alt="A beautiful living room." title="Welcome to Exceptional Realty Group">
+        <figcaption>345 Carl Street Apt 12, Carrol Rd. Brooklyn, NY - Photo by Denise Richards.</figcaption>
+      </figure>
+      <p>Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Quae, perferendis nisi nihil debitis aspernatur doloribus quam eveniet quibusdam tempora esse! Repudiandae, assumenda, debitis doloribus ea eius ab at quae totam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, inventore aliquid ipsam debitis nulla vitae omnis nemo quisquam? Obcaecati dolor ipsum distinctio reprehenderit aliquid autem ea vel provident voluptas nisi.</p>
+
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, natus, nobis, tempore recusandae culpa deleniti dignissimos laborum perspiciatis exercitationem obcaecati dolores unde eveniet eius debitis perferendis provident porro. Ipsum, placeat.</p>
+    </section>
+    <section id="promo-section">
+      <!-- promo video -->
+
+      <video controls>
+        <source src="videos/real-estate.mp4" type="video/mp4">
+        <source src="videos/real-estate.ogv" type="video/ogg">
+        Your browser does not support HTML5 video. <a href="http://browsehappy.com" target="_blank">Please upgrade your browser</a>.
+      </video>
+    </section>
+    <footer>
+      &copy; 2014 Exceptional Realty, All Rights Reserved
+    </footer>
   </body>
 </html>
