added css elements to website

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   </head>
   <body>
     <!--Viewable stuff: text, links, images, media-->
-    <h1>Welcome to Exceptional Realty Group</h1>
-    <!--Don't need to worry about p here-->
-    <h2>Located in Sacramento, California</h2>
+      <h1>Welcome to Exceptional Realty Group</h1>
+      <!--Don't need to worry about p here-->
+      <h2 class="milk-text">Located in Sacramento, California</h2>
 
     <div class="links">
       <a href="index.html">About</a> ||
@@ -27,7 +27,7 @@
       <a href="real-estate-listings.html">Real Estate Listings</a> ||
       <a href="http://hud.gov" target="_blank">Housing & Urban Development Site </a>
     </div>
-
+    <br>
     <!--foldername/ = go inside the folder.
     filename = use a file in the current directory
     ../ leave the current folder and go up to the parent
